<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockTakr</string>
    <string name="download_products">Download Products</string>
    <string name="perform_stocktake">Perform Stocktake</string>
    <string name="submit_stocktake">Submit Stocktake</string>
    <string name="price_check">Price Check</string>
    <string name="stocktakr_settings">Settings</string>
    <string name="quantity">Quantity: </string>
    <string name="change_quantity">Change Quantity</string>
    <string name="quantity_for">"Quantity for "</string>
    <string name="scan">Scan</string>
    <string name="recorded">Recorded</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="name">Name: </string>
    <string name="store_id">Store ID</string>
    <string name="password">Password</string>
	<string name="your_name">Your Name</string>
	<string name="test_connection">Test Connection</string>
	<string name="product_not_found_message">"Download the latest product list. Could not find a product for the barcode: "</string>
	<string name="download_product_info">Download Product Info</string>
	<string name="products">"Products: "</string>
	<string name="change">Change</string>
	<string name="remove">Remove</string>
	<string name="cancel">Cancel</string>
	<string name="remove_confirmation">"Are you sure you want to remove this product?"</string>
	<string name="barcode_label">"Barcode: "</string>
	<string name="price_label">"Price: "</string>
	<string name="price_error">(error)</string>
	<string name="set_quantity_after_scan">Set quantity after scan</string>
	<string name="toggle_turn_on">On</string>
	<string name="toggle_turn_off">Off</string>
	<string name="None"> </string>
	
</resources>

