<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/store_id_label"
        android:layout_margin="8dip"
        android:layout_marginBottom="0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/store_id"
        android:singleLine="true"
        android:hint="Store ID"
        android:layout_margin="8dip"
        android:layout_marginTop="0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/password_label"
        android:layout_margin="8dip"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/password"
        android:singleLine="true"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_margin="8dip"
        android:layout_marginTop="0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

     <Button
        android:id="@+id/test_connection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_connection"
        android:layout_margin="16dip"/>

     <TextView
        android:id="@+id/setquantity_label"
        android:layout_margin="8dip"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_quantity_after_scan"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     		  <ToggleButton
        android:id="@+id/set_quantity"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_margin="16dip"     
        android:layout_width="wrap_content"   
        android:textOn="@string/toggle_turn_on"
        android:textOff="@string/toggle_turn_off" />          
     
</LinearLayout>
