<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_margin="8dip"
	    android:orientation="vertical"
	    android:layout_weight="1.0">
    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	
	        <TextView
		        android:text="@string/name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	        
			<EditText
			    android:id="@+id/person_name"
			    android:singleLine="true"
			    android:selectAllOnFocus="true"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/your_name"/>
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/product_counter"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dip"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	   <Button
        android:id="@+id/submit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:text="@string/submit" />    
	    
    </LinearLayout>  
   
</LinearLayout>
